# zitadel-cli

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  cliff.toml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/zitadel-cli/: BUILD.bazel  main.go
internal/client/: BUILD.bazel  client.go  client_test.go
internal/commands/: BUILD.bazel  app.go  completion.go  context.go  machine.go  misc.go  org.go  pat.go  project.go  provision.go  role.go  root.go  user.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/output/: BUILD.bazel  output.go  prompt.go  spinner.go
internal/version/: BUILD.bazel  version.go
tools/: BUILD.bazel  fmt.sh  lint.sh
