"""Bazel module for zitadel-cli."""

module(
    name = "zitadel-cli",
    version = "0.1.0",
)

# Go toolchain
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

# Packaging
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Platform support
bazel_dep(name = "platforms", version = "0.0.11")

# Go SDK setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_briandowns_spinner",
    "com_github_fatih_color",
    "com_github_golang_jwt_jwt_v5",
    "com_github_manifoldco_promptui",
    "com_github_olekukonko_tablewriter",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
)

# Tools
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# golangci-lint v2.7.2
http_archive(
    name = "golangci_lint_darwin_arm64",
    build_file_content = 'filegroup(name = "bin", srcs = ["golangci-lint"], visibility = ["//visibility:public"])',
    strip_prefix = "golangci-lint-2.7.2-darwin-arm64",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.7.2/golangci-lint-2.7.2-darwin-arm64.tar.gz"],
)

http_archive(
    name = "golangci_lint_darwin_amd64",
    build_file_content = 'filegroup(name = "bin", srcs = ["golangci-lint"], visibility = ["//visibility:public"])',
    strip_prefix = "golangci-lint-2.7.2-darwin-amd64",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.7.2/golangci-lint-2.7.2-darwin-amd64.tar.gz"],
)

http_archive(
    name = "golangci_lint_linux_amd64",
    build_file_content = 'filegroup(name = "bin", srcs = ["golangci-lint"], visibility = ["//visibility:public"])',
    strip_prefix = "golangci-lint-2.7.2-linux-amd64",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.7.2/golangci-lint-2.7.2-linux-amd64.tar.gz"],
)

# gofumpt v0.9.2 (bare binary, not tarball)
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "gofumpt_darwin_arm64",
    downloaded_file_path = "gofumpt",
    executable = True,
    urls = ["https://github.com/mvdan/gofumpt/releases/download/v0.9.2/gofumpt_v0.9.2_darwin_arm64"],
)

http_file(
    name = "gofumpt_darwin_amd64",
    downloaded_file_path = "gofumpt",
    executable = True,
    urls = ["https://github.com/mvdan/gofumpt/releases/download/v0.9.2/gofumpt_v0.9.2_darwin_amd64"],
)

http_file(
    name = "gofumpt_linux_amd64",
    downloaded_file_path = "gofumpt",
    executable = True,
    urls = ["https://github.com/mvdan/gofumpt/releases/download/v0.9.2/gofumpt_v0.9.2_linux_amd64"],
)
