load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "app.go",
        "completion.go",
        "context.go",
        "machine.go",
        "misc.go",
        "org.go",
        "pat.go",
        "project.go",
        "provision.go",
        "role.go",
        "root.go",
        "user.go",
    ],
    importpath = "github.com/roylee17/zitadel-cli/internal/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/client",
        "//internal/config",
        "//internal/output",
        "//internal/version",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
